--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@
   max-width: 600px;
 }
 
+.material-section {
+  max-width: 600px;
+}
+
 .side-bar {
   max-width: 200px;
 }
@@ -43,5 +47,10 @@
 .side-bar-button {
   margin: 5px;
   display: block;
-  width: 120px;
+  width: 140px;
+}
+
+.other-button {
+  margin: 5px;
+  width: 100px;
 }
