--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,14 @@
   max-width: 600px;
 }
 
+.assignment-section {
+  max-width: 600px;
+}
+
+.submission-section {
+  max-width: 600px;
+}
+
 .side-bar {
   max-width: 200px;
 }
@@ -47,7 +55,7 @@
 .side-bar-button {
   margin: 5px;
   display: block;
-  width: 140px;
+  width: 150px;
 }
 
 .other-button {
