--- a/src/App.css
+++ b/src/App.css
@@ -33,19 +33,23 @@
 }
 
 .announcement-section {
-  max-width: 600px;
+  max-width: 700px;
 }
 
 .material-section {
-  max-width: 600px;
+  max-width: 700px;
 }
 
 .assignment-section {
-  max-width: 600px;
+  max-width: 700px;
 }
 
 .submission-section {
-  max-width: 600px;
+  max-width: 700px;
+}
+
+.gradebook-section {
+  max-width: 700px;
 }
 
 .side-bar {
@@ -61,4 +65,8 @@
 .other-button {
   margin: 5px;
   width: 100px;
+}
+
+.smallcard:hover {
+  background:#eae4c5;
 }
