--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .gradebook-section {
-  max-width: 700px;
+  max-width: 900px;
 }
 
 .side-bar {
@@ -70,3 +70,5 @@
 .smallcard:hover {
   background:#eae4c5;
 }
+
+#scrolltable { margin-top: 20px; overflow: auto; }
