--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,30 @@
 }
 
 #scrolltable { margin-top: 20px; overflow: auto; }
+
+/* .course-page-header {
+  background: linear-gradient(to right, #66ffff 0%, #0099ff 100%);
+  height: 200px;
+} */
+
+.course-name {
+  padding: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: bolder;
+}
+
+.professor-contact-info {
+  padding: 20px;
+}
+
+.hr-header {
+  border: 5px solid #08773e;
+  border-radius: 5px;
+}
+
+.header{
+  font-weight: bolder;
+  color: #455034;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
+}
